# Nivesh-Terminal

./: .gitignore  CLAUDE.md  Makefile  README.md  home.py  pyproject.toml  requirements.txt
.streamlit/: secrets.toml.example
backend/: main.py
backend/analytics/: one_year_return.py
backend/api/: __init__.py  app.py  dto.py  export_openapi.py  openapi.json
backend/domain/market_data/: repository.py  schema.py  sqlite_repository.py
backend/domain/model/: analytics.py
backend/features/: returns.py
backend/ingestion/: filesystem_object_store.py  raw_capture.py  raw_store.py
backend/orchestration/: pipeline.py  recompute.py
backend/platform/: identifiers.py
backend/providers/ports/: errors.py  price_history.py
backend/providers/yfinance/: adapter.py  symbology.py
backend/tests/analytics/: test_one_year_return.py
backend/tests/api/: __init__.py  test_composition_root.py  test_one_year_return_endpoint.py  test_openapi_contract.py  test_source_ref_resolution.py
backend/tests/domain/: test_market_data_repository.py  (+1 more)
docs/: PROJECT_CONTEXT.md
docs/implementation/: 00-walking-skeleton-plan.md  01-engineering-decisions.md  03-walking-skeleton-status.md  04-recompute-rto.md
shared/: calculations.py  data_loader.py  theme.py
shared/tabs/: tab_builder.py  tab_charts.py  tab_search.py
tickers/: india_universe.py  us_universe.py
tools/: recompute_rto.py  skeleton_status.py
tools/ci/: architecture_map.py
tools/tests/: test_skeleton_status.py
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
(+17 files in other folders)
